--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   provider: ^6.0.5
@@ -26,10 +28,10 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   json_annotation: ^4.8.1
-  intl: ^0.18.1
+  intl: ^0.20.2
   flutter_svg: ^2.0.9
   lottie: ^2.7.0
-  flutter_local_notifications: ^16.3.0
+# flutter_local_notifications: ^16.3.0
 
 dev_dependencies:
   flutter_test:
