--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Application needs to access camera to take a picture</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Application needs to access photo library to pick an image</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Application needs to access photo library to pick an image</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsLocalNetworking</key>
